--- a/social-media-app/package.json
+++ b/social-media-app/package.json
@@ -9,10 +9,12 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.14.1",
     "@supabase/supabase-js": "^2.29.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
